feat(frontend): adding auction
