# server/api/auctions/[auctionId].delete.ts
@@ -1,7 +1,7 @@
 import { PrismaClient } from '@prisma/client';
 import { z } from 'zod';
 import { broadcastRoom } from '~/server/lib/broadcastRoom';
-import { nextTurn } from '~/server/lib/nextTurn';
+import { getNextTurnUserId } from '~/server/lib/getNextTurnUserId';
 import { prismaErrorHandler } from '~/server/lib/prismaErrorHandler';
 import { zodErrorHandler } from '~/server/lib/zodErrorHandler';
 
@@ -35,107 +35,96 @@ export default defineEventHandler(async (event) => {
     });
   }
 
-  switch (auctionRequest.userId) {
-    // turnUserからのリクエスト -> オークション確定処理
-    case auction.room.turnUserId: {
-      await prisma.auction.update({
-        where: { id: auctionId },
-        data: {
-          isConfirmed: true,
+  if (auction.isConfirmed) {
+    const requestMoneyUserCards = await prisma.userCard
+      .findMany({
+        where: {
+          id: {
+            in: auctionRequest.moneyUserCardIds,
+          },
+          card: {
+            type: 'MONEY',
+            // 0円カードは除外
+            point: {
+              not: 0,
+            },
+          },
         },
-      });
+        include: {
+          card: true,
+        },
+      })
+      .catch(prismaErrorHandler);
 
-      break;
-    }
-    // topUserからからのリクエスト -> 支払い処理
-    case auction.topUserId: {
-      if (auction.isConfirmed === false) {
-        throw createError({
-          statusCode: 400,
-          message: 'The auction has not been confirmed yet.',
-        });
-      }
+    // お金が足りているか確認
+    const requestMoneyAmount = requestMoneyUserCards.reduce(
+      (acc, { card: { point } }) => acc + point,
+      0,
+    );
 
-      const requestMoneyUserCards = await prisma.userCard
-        .findMany({
-          where: {
-            id: {
-              in: auctionRequest.moneyUserCardIds,
-            },
-            card: {
-              type: 'MONEY',
-              // 0円カードは除外
-              point: {
-                not: 0,
-              },
-            },
-          },
-          include: {
-            card: true,
-          },
-        })
-        .catch(prismaErrorHandler);
-
-      // お金が足りているか確認
-      const requestMoneyAmount = requestMoneyUserCards.reduce(
-        (acc, { card: { point } }) => acc + point,
-        0,
-      );
-
-      if (requestMoneyAmount < auction.amount) {
-        throw createError({
-          statusCode: 400,
-          message: 'The user does not have enough money.',
-        });
-      }
-
-      prisma
-        .$transaction(async (prisma) => {
-          // topUserからお金カード削除
-          await prisma.userCard.deleteMany({
-            where: {
-              id: {
-                in: requestMoneyUserCards.map(({ id }) => id),
-              },
-            },
-          });
-
-          // turnUserにお金カード付与
-          await prisma.userCard.createMany({
-            data: requestMoneyUserCards.map(({ cardId }) => ({
-              userId: auction.room!.turnUserId!,
-              cardId,
-            })),
-          });
-
-          // topUserに動物カード付与
-          await prisma.userCard.create({
-            data: {
-              userId: auctionRequest.userId,
-              cardId: auction.animalCardId,
-            },
-          });
-
-          // auction削除
-          await prisma.auction.delete({
-            where: {
-              id: auctionId,
-            },
-          });
-
-          // 次のターン
-          await nextTurn(auction.room!);
-        })
-        .catch(prismaErrorHandler);
-
-      break;
-    }
-    default: {
+    if (requestMoneyAmount < auction.amount) {
       throw createError({
         statusCode: 400,
-        message: 'The user is not allowed to delete the auction.',
+        message: 'The user does not have enough money.',
       });
     }
+
+    await prisma
+      .$transaction(async (prisma) => {
+        // topUserからお金カード削除
+        await prisma.userCard.deleteMany({
+          where: {
+            id: {
+              in: requestMoneyUserCards.map(({ id }) => id),
+            },
+          },
+        });
+
+        // turnUserにお金カード付与
+        await prisma.userCard.createMany({
+          data: requestMoneyUserCards.map(({ cardId }) => ({
+            userId: auction.room!.turnUserId!,
+            cardId,
+          })),
+        });
+
+        // topUserに動物カード付与
+        await prisma.userCard.create({
+          data: {
+            userId: auctionRequest.userId,
+            cardId: auction.animalCardId,
+          },
+        });
+
+        // auction削除
+        await prisma.auction.delete({
+          where: {
+            id: auctionId,
+          },
+        });
+
+        // 次のターン
+        if (auction.room) {
+          await prisma.room.update({
+            where: {
+              id: auction.room.id,
+            },
+            data: {
+              auctionId: null,
+              tradeId: null,
+              turnUserId: getNextTurnUserId(auction.room),
+            },
+          });
+        }
+      })
+      .catch(prismaErrorHandler);
+  } else {
+    await prisma.auction.update({
+      where: { id: auctionId },
+      data: {
+        isConfirmed: true,
+      },
+    });
   }
 
   await broadcastRoom(auction.room.id);
